--- a/private/templates/sbnext-common/user.twig
+++ b/private/templates/sbnext-common/user.twig
@@ -35,9 +35,6 @@
                 {% endif %}
                 </p>
             </div>
-            <form action="login.php" method="post" name="logout">
-                <input type="hidden" name="logout" value="yes">
-            </form>
         {% endif %}
     {% endif %}
     <div class="main-content channel-header-bg">
@@ -80,7 +77,7 @@
     </div>
     <div class="tab">
         <button class="tablinks active" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
-        <button class="tablinks" onclick="openTab(event, 'Videos')">Videos</button>
+        <button class="tablinks" onclick="openTab(event, 'Videos')">Uploads</button>
         <button class="tablinks" onclick="openTab(event, 'Discussion')">Discussion</button>
         <button class="tablinks" onclick="openTab(event, 'About')">About</button>
     </div>
