--- a/private/templates/sbnext-common/settings.twig
+++ b/private/templates/sbnext-common/settings.twig
@@ -64,16 +64,9 @@
         <p>{{ __("Profile options are not available to banned users.") }}</p>
     {% endif %}
 
-    <h3>{{ __("Miscellaneous") }}</h3>
+    <!-- <h3>{{ __("Miscellaneous") }}</h3>
     <table class="settings">
-        <tr>
-            <td class="a">{{ __("Sounds") }}</td>
-            <td class="b">
-                <input type="checkbox" id="enableSounds" name="enableSounds" value="true">
-                <label for="enableSounds"> {{ __("Enable sounds") }}</label><br>
-            </td>
-        </tr>
-    </table>
+    </table> -->
 
     <input type="hidden" name="magic" value="squarebracket_settings_save">
     <div class="right">
