--- a/private/templates/sbnext-desktop/index.twig
+++ b/private/templates/sbnext-desktop/index.twig
@@ -56,22 +56,28 @@
     <div class="card">
         <div class="card-body-fat">
             <h3 style="margin-top:0">{{ __("Randomly selected uploads") }}</h3>
+            <div class="gallery-image">
             {% for video in videos %}
-                    <article class="post">
-                        <a href="watch?v={{ video.video_id }}">
-                            <div class="image">
-                                {% if video.post_type == 0 or video.post_type == 1  %}
-                                    <img class="img-fluid" src="{{ video_thumbnail(video.video_id) }}">
-                                {% elseif video.post_type == 2 %}
-                                    <img class="img-fluid" src="/dynamic/art_thumbnails/{{ video.video_id }}.jpg">
-                                {% endif  %}
+                <a href="watch?v={{ video.video_id }}">
+                    <article class="img-box">
+                            {% if video.post_type == 0 or video.post_type == 1 %}
+                                <img src="{{ video_thumbnail(video.video_id) }}">
+                            {% elseif video.post_type == 2 %}
+                                <img src="/dynamic/art_thumbnails/{{ video.video_id }}.jpg">
+                            {% endif %}
+                            <div class="transparent-box">
+                                <div class="caption">
+                                    <img src="{{ profile_image(video.u_name) }}" alt="{{ video.u_name }}">
+                                    <p>{{ __("by") }} {{ video.u_name }}</p>
+                                    <strong>{{ video.title }}</strong>
+                                </div>
                             </div>
-                        <div class="info">{{ video.views }} {{ __("views") }}</div>
-                        </a>
                     </article>
+                </a>
             {% else %}
                 <p>{{ __("No uploads.") }}</p>
             {% endfor %}
+            </div>
         </div>
     </div>
 </div>
