--- a/private/templates/sbnext-desktop/index.twig
+++ b/private/templates/sbnext-desktop/index.twig
@@ -14,7 +14,7 @@
 <div class="indexNext">
     {% if theme != 'nostalgia' %}
         <div class="main-content">
-            <div class="container page-container">
+            <div class="container">
                 {% if log %}
                     <div class="col-md-8">
                         <h1>{{ __("Welcome to squareBracket") }}</h1>
