rewrite input scss and add hover background for user menu

--- a/private/scss-finalium/_variables.scss
+++ b/private/scss-finalium/_variables.scss
@@ -1,17 +1,16 @@
 $threshold: 65%;
 $teal: #468aca;
-$red: #993300;
+$red: #a6280f;
 $white: #FCFCFC;
 $black: #000;
 $indigo: #4d27e6;
 $purple: #7942c1;
 $pink: #eb44b0;
 $orange: #ff9900;
-$yellow: #ffbf00;
+$yellow: #f5cc14;
 $cyan: #1778b8;
-$blue: #1b7fcc;
-$green: #559900;
-$poktube-blue: #0051b3;
+$blue: #297fd6;
+$green: #439906;
 $aqua: #20c997;
 $primary: $blue;
 $success: $green;
