--- a/private/scss-finalium/nostalgia.scss
+++ b/private/scss-finalium/nostalgia.scss
@@ -7,7 +7,7 @@ a:link, a:visited, a:active {
   color: #03c;
 }
 
-.page-container {
+.container {
   width: 960px;
   background-color: white;
   margin-top: -2px;
