--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -198,8 +198,8 @@ menu, ol, ul, li {
 }
 
 .main-content {
-  background: rgb(62, 62, 62);
-  background: linear-gradient(90deg, rgba(62, 62, 62, 1) 0%, rgba(107, 107, 107, 1) 35%, rgba(155, 155, 155, 1) 100%);
+  background: rgb(55, 55, 55);
+  background: linear-gradient(90deg, rgba(55, 55, 55, 1) 0%, rgba(107, 107, 107, 1) 35%, rgba(155, 155, 155, 1) 100%);
   color: white;
   margin: -48px 0 0;
   padding: 75px 0px 20px;
@@ -238,54 +238,22 @@ menu, ol, ul, li {
 }
 
 textarea,
-input[type="text"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
-input[type="email"],
-input[type="url"],
-input[type="search"],
-input[type="tel"],
-input[type="color"],
-.uneditable-input {
-  background-color: #ffffff;
-  border: 1px solid #cccccc;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  transition: border linear 0.2s, box-shadow linear 0.2s;
-  border-radius: 5px;
+input[type]:not([type=file]):not([type=submit]) {
+    border: 1px solid $gray-400;
+	border-radius: 4px;
+	box-shadow: 0 0 1px $gray-400;
+	-moz-box-shadow: 0 0 1px $gray-400;
+	-webkit-box-shadow: 0 0 1px $gray-400;
+	transition: border linear 0.3s, box-shadow linear 0.3s;
 }
 
 textarea:focus,
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus,
-.uneditable-input:focus {
-  border-color: rgba(82, 168, 236, 0.8);
-  outline: 0;
-  outline: thin dotted \9
-;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-  0 0 8px rgba(82, 168, 236, 0.6);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-  0 0 8px rgba(82, 168, 236, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-  0 0 8px rgba(82, 168, 236, 0.6);
+input[type]:not([type=file]):not([type=submit]):focus {
+    border-color: $primary;
+	box-shadow: 0 0 5px $primary;
+	-moz-box-shadow: 0 0 5px $primary;
+	-webkit-box-shadow: 0 0 5px $primary;
+	outline: 0;
 }
 
 .chaziz-body {
@@ -317,14 +285,16 @@ input[type="color"]:focus,
   }
 }
 
-.form-signin input[type="text"],
-.form-signin input[type="password"] {
-  font-size: 16px;
-  height: auto;
-  margin-bottom: 15px;
-  padding: 7px 9px;
-  width: 100%;
-  box-sizing: border-box;
+.form-signin {
+	input[type="text"],
+	input[type="password"] {
+		font-size: 16px;
+		height: auto;
+		margin-bottom: 15px;
+		padding: 7px 9px;
+		width: 100%;
+		box-sizing: border-box;
+	}
 }
 
 .form-long {
@@ -745,7 +715,6 @@ input[type="color"]:focus,
   top: 100%;
   max-height: 80vh;
   z-index: 1000;
-  padding: 0.25em;
   width: 160px;
   overflow: hidden;
   background: #ffffff;
@@ -754,8 +723,16 @@ input[type="color"]:focus,
 
   ul {
     li {
-      padding: 4px 0;
+      padding: 6px 0;
+		a {
+			width: 100%;
+			display: block;
+			padding: 0 10px !important;
+		}
     }
+	li:hover {
+	  background-color: lighten($primary, 45%);
+	}
   }
 }
 
