wait i think that's the issue

--- a/private/templates/sbnext-common/resetpassword.twig
+++ b/private/templates/sbnext-common/resetpassword.twig
@@ -9,11 +9,11 @@
 
         <form class="reglog" method="POST">
             <p>
-                <span>{{ __("New Password:") }}</span>
+                <span>{{ __("New Password") }}:</span>
                 <input type="password" name="pass" size="25" maxlength="32">
             </p>
             <p>
-                <span>{{ __("Repeat New Password:") }}</span>
+                <span>{{ __("Repeat New Password") }}:</span>
                 <input type="password" name="pass2" size="25" maxlength="32">
             </p>
 
