--- a/private/templates/sbnext-mobile/watch.twig
+++ b/private/templates/sbnext-mobile/watch.twig
@@ -76,7 +76,7 @@
                             <div class="description-extra">
                                 <ul>
                                     <li>
-                                        <h4 class="title">{{ __("Category:") }}</h4>
+                                        <h4 class="title">{{ __("Category") }}:</h4>
                                         <div class="content">{{ video.category_id | category_id_to_name() }}</div>
                                     </li>
                                 </ul>
@@ -86,13 +86,13 @@
                             <h2>{{ __("Statistics") }}</h2>
                             <ul style="padding:0">
                                 <li>
-                                    {{ __("Rating ratio:") }} {{ videoRatio }}%
+                                    {{ __("Rating ratio") }}: {{ videoRatio }}%
                                 </li>
                                 <li>
-                                    {{ __("Last viewed:") }} {{ recentView | relative_time }}
+                                    {{ __("Last viewed") }}: {{ recentView | relative_time }}
                                 </li>
                                 <li>
-                                    {{ __("Favorites:") }} {{ total_favorites }}
+                                    {{ __("Favorites") }}: {{ total_favorites }}
                                 </li>
                             </ul>
                         </div>
