--- a/private/templates/sbnext-common/user.twig
+++ b/private/templates/sbnext-common/user.twig
@@ -18,7 +18,7 @@
 {% block content %}
     <style>
         .channel-header-bg {
-            background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444), center !important;
+            background: url('/dynamic/banners/{{ userpagedata.name }}.png'), linear-gradient(#888, #444), center !important;
             height: 225px;
             padding: 0;
             margin-top: 0;
