--- a/private/templates/sbnext-common/edit.twig
+++ b/private/templates/sbnext-common/edit.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}{{ __("Edit video") }}{% endblock %}
+{% block title %}{{ __("Edit upload") }}{% endblock %}
 
 	{% block content %}
         <form name="uploadForm" id="uploadForm" method="post" action="edit.php" enctype="multipart/form-data">
