--- a/private/templates/sbnext-common/modal.twig
+++ b/private/templates/sbnext-common/modal.twig
@@ -22,7 +22,7 @@
     <input type="radio" id="square" name="profilepicture" value="square">
     <label for="square">{{ __("Square") }}</label>
     <input type="radio" id="rounded" name="profilepicture" value="rounded">
-    <label for="rounded">{{ __("Rounded") }}</label>
+    <label for="rounded">{{ __("In-between") }}</label>
     <input type="radio" id="circle" name="profilepicture" value="default">
     <label for="circle">{{ __("Circle") }}</label>
     <input type="hidden" name="othermagic" value="the-previous-string-was-unfunny">
