add profile background setting

--- a/private/templates/sbnext-common/settings.twig
+++ b/private/templates/sbnext-common/settings.twig
@@ -44,6 +44,12 @@
             </td>
         </tr>
         <tr>
+            <td class="a">{{ __("Profile background") }}</td>
+            <td class="b">
+                <input class="form-control" type="file" name="profileBackground" id="profileBackground">
+            </td>
+        </tr>
+        <tr>
             <td class="a">{{ __("Display name") }}</td>
             <td class="b"><input type="text" name="title" size="45" maxlength="256" value="{{ userdata.title }}"></td>
         </tr>
