--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -198,8 +198,8 @@ menu, ol, ul, li {
 }
 
 .main-content {
-  background: rgb(55, 55, 55);
-  background: linear-gradient(90deg, rgba(55, 55, 55, 1) 0%, rgba(107, 107, 107, 1) 35%, rgba(155, 155, 155, 1) 100%);
+  background: rgb(24,0,36);
+  background: linear-gradient(90deg, rgba(24,0,36,1) 0%, rgba(95,9,121,1) 35%, rgba(115,21,129,1) 100%); 
   color: white;
   margin: -48px 0 0;
   padding: 75px 0px 20px;
