--- a/private/templates/sbnext-common/_layout.twig
+++ b/private/templates/sbnext-common/_layout.twig
@@ -2,7 +2,7 @@
 <html lang="{{ __("en-US") }}">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %} - squareBracket</title>
+    <title>{% block title %}{% endblock %} - Qobo</title>
     {% block head %}{% endblock %}
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
@@ -13,8 +13,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
     <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#1b93ff">
-    <meta name="apple-mobile-web-app-title" content="squareBracket">
-    <meta name="application-name" content="squareBracket">
+    <meta name="apple-mobile-web-app-title" content="Qobo">
+    <meta name="application-name" content="Qobo">
     <meta name="msapplication-TileColor" content="#1d3fc4">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -86,7 +86,7 @@
 <div class="container">
     {% if userbandata %}
         <div class="header_message header-danger">
-            <h1>{{ __("Sorry %s, you are banned from squareBracket.", [userdata.name]) }}</h1>
+            <h1>{{ __("Sorry %s, you are banned from Qobo.", [userdata.name]) }}</h1>
             <strong>{{ userbandata.reason }}</strong>
             <p>{{ __("This ban is not set to expire.") }}</p>
             {# do we really need ban durations? #}
@@ -98,7 +98,7 @@
 <footer>
     <div class="footer">
         <img src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png">
-        <p>{{ __("Version") }} {{ version }} · <strong>{{ __("By the squareBracket contributors") }}</strong> · 2020-{{ 'now' | date('Y') }}
+        <p>{{ __("Version") }} {{ version }} · <strong>{{ __("By the Qobo contributors") }}</strong> · 2020-{{ 'now' | date('Y') }}
             | <strong><a href="/statistics.php">{{ __("Statistics") }}</a></strong> · <strong><a href="/news.php">{{ __("What's new") }}</a></strong>
         </p>
         <h5>{{ __("Running on Git commit: ") }} <a
