--- a/private/templates/sbnext-desktop/index.twig
+++ b/private/templates/sbnext-desktop/index.twig
@@ -1,9 +1,9 @@
 {% extends "_layout.twig" %}
 {% block head %}
-    <meta name="title" content="squareBracket">
+    <meta name="title" content="Qobo">
     <meta name="description" content="Unbelivable, This is not PokTube.">
-    <meta property="og:site_name" content="squareBracket"/>
-    <meta property="og:title" content="squareBracket">
+    <meta property="og:site_name" content="Qobo"/>
+    <meta property="og:title" content="Qobo">
     <meta property="og:description" content="Again.">
     <meta property="og:image" content="{{ domain }}assets/logo_square_icon.png">
     <meta property="og:url" content="{{ page_url }}">
@@ -17,7 +17,7 @@
             <div class="container">
                 {% if log %}
                     <div class="col-md-8">
-                        <h1>{{ __("Welcome to squareBracket") }}</h1>
+                        <h1>{{ __("Welcome to Qobo") }}</h1>
                         <h3>@{{ userdata.name }}</h3>
                     </div>
                     <div class="col-md-4 right stats">
@@ -33,7 +33,7 @@
                     </div>
                 {% else %}
                     <div class="col-md-8">
-                        <h1>{{ __("Welcome to squareBracket") }}</h1>
+                        <h1>{{ __("Welcome to Qobo") }}</h1>
                         <h3 style="padding:0;margin:0;">{{ __("Again.") }}</h3>
                     </div>
                     <div class="col-md-4">
