replace font with inter

--- a/private/scss-finalium/_variables.scss
+++ b/private/scss-finalium/_variables.scss
@@ -82,4 +82,4 @@ $theme-colors: (
         "carrot": $orange-color,
 );
 
-$font: "Barlow", "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font: "Inter", "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
