--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -6,8 +6,8 @@
         <div class="card">
             <div class="card-body">
                 <div style="padding:5px;">
-                    <h2>{{ __("About this instance of squareBracket") }}</h2>
-                    <p>{{ __("View count may not be accurate due to deleted posts.") }}</p>
+                    <h2>{{ __("About this instance of Qobo") }}</h2>
+                    <p>{{ __("View count may not be accurate due to deleted uploads.") }}</p>
                 </div>
                 <div class="grid">
                     <div class="col-md-4">
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="statbox">
-                            <div class="stat-title">{{ __("Posts") }}</div>
+                            <div class="stat-title">{{ __("Uploads") }}</div>
                             {{ stats.videocount }}
                         </div>
                     </div>
