--- a/private/templates/sbnext-common/_layout.twig
+++ b/private/templates/sbnext-common/_layout.twig
@@ -49,70 +49,52 @@
     </style>
 </head>
 <body>
-<div id="guide">
-    <h3>{{ __("Guide") }}</h3>
-    {% if log %}
-        <h4>{{ __("Following") }}</h4>
-        {% for user in allUsers %}
-            <ul>
-                <li class="guide-channel">
-                    <a href="/user.php?name={{ user.u_name }}" class="guide-item"><img class="thumb"
-                                                                                       src="{{ profile_image(user.u_name) }}">{{ user.u_name }}
-                    </a>
-                </li>
-            </ul>
-        {% else %}
-        <p>{{ __("You do not follow any users!") }}</p>
-        {% endfor %}
-    {% else %}
-        <h3>{{ __("Last connected") }}</h3>
-        {% for user in allUsers %}
-            <ul>
-                <li class="guide-channel">
-                    <a href="/user.php?name={{ user.name }}" class="guide-item"><img class="thumb"
-                                                                                     src="{{ profile_image(user.name) }}">{{ user.name }}
-                    </a>
-                </li>
-            </ul>
-        {% endfor %}
-    {% endif %}
-</div>
 {% if theme == 'nostalgia' %}
     {% include "components/nostalgia/_header.twig" %}
 {% else %}
+<div id="guide">
+    <a href="index.php" class="button button-secondary-invis">
+        {{ icon("house-door", 20) }}
+    </a>
+    <a href="/browse.php" class="button button-secondary-invis">
+        {{ icon("film", 20) }}
+    </a>
+    <a href="/browse.php" class="button button-secondary-invis">
+        {{ icon("images", 20) }}
+    </a>
+</div>
     {% include "components/_header.twig" %}
 {% endif %}
-{% block precontent %}{% endblock %}
-<div class="container">
-    {% if userbandata %}
-        <div class="header_message header-danger">
-            <h1>{{ __("Sorry %s, you are banned from Qobo.", [userdata.name]) }}</h1>
-            <strong>{{ userbandata.reason }}</strong>
-            <p>{{ __("This ban is not set to expire.") }}</p>
-            {# do we really need ban durations? #}
-        </div>
-    {% endif %}
-    {% block content %}{% endblock %}
-</div>
-</div>
-<footer>
-    <div class="footer">
-        <img src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png">
-        <p>{{ __("Version") }} {{ version }} · <strong>{{ __("By the Qobo contributors") }}</strong> · 2020-{{ 'now' | date('Y') }}
-            | <strong><a href="/statistics.php">{{ __("Statistics") }}</a></strong> · <strong><a href="/news.php">{{ __("What's new") }}</a></strong>
-        </p>
-        <h5>{{ __("Running on Git commit: ") }} <a
-                    href="https://github.com/chazizgrkb/squarebracket/commit/{{ git_commit() }}">{{ git_commit() }}</a><br>
-        </h5>
-        {% if isMaintenance != true %}
-            <a class="button button-neutral button-small btnAdd" role="button">{{ __("Options") }}</a>
-            <div id="myModal" class="bg-neutral" style="padding:0.3em;">
+<div class="page">
+	{% block precontent %}{% endblock %}
+	<div class="container">
+		{% if userbandata %}
+			<div class="header_message header-danger">
+				<h1>{{ __("Sorry %s, you are banned from Qobo.", [userdata.name]) }}</h1>
+				<strong>{{ userbandata.reason }}</strong>
+				<p>{{ __("This ban is not set to expire.") }}</p>
+				{# do we really need ban durations? #}
+			</div>
+		{% endif %}
+		{% block content %}{% endblock %}
+	</div>
+	<footer>
+		<div class="footer">
+			<img src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png">
+			<p>{{ __("Version") }} {{ version }} · <strong>{{ __("By the Qobo contributors") }}</strong> · 2020-{{ 'now' | date('Y') }}
+				| <strong><a href="/statistics.php">{{ __("Statistics") }}</a></strong> · <strong><a href="/news.php">{{ __("What's new") }}</a></strong>
+			</p>
+			<h5>{{ __("Running on Git commit: ") }} <a
+						href="https://github.com/chazizgrkb/squarebracket/commit/{{ git_commit() }}">{{ git_commit() }}</a><br>
+			</h5>
+			{% if isMaintenance != true %}
+				<a class="button button-neutral button-small btnAdd" role="button">{{ __("Options") }}</a>
+				<div id="myModal" class="bg-neutral" style="padding:0.3em;">
 
-            </div>
-        {% endif %}
-    </div>
-</footer>
-{% block custom_footer %}
-{% endblock %}
+				</div>
+			{% endif %}
+		</div>
+	</footer>
+</div>
 </body>
 </html>
